fix: scrolling toolbar off screen

--- a/viewer2/src/app.css
+++ b/viewer2/src/app.css
@@ -18,6 +18,13 @@
   -webkit-text-size-adjust: 100%;
 }
 
+body,
+main,
+#app
+{
+  overflow: hidden;
+}
+
 a:hover {
   color: #747bff;
 }
